# nix-config

./: .gitignore  .sops.yaml  flake.nix  fs.md
home/: default.nix  preservation.nix
home/jacobsen/: default.nix  fonts.nix  gtk.nix  mail.nix  packages.nix  qt.nix  ssh.nix  xdg.nix
home/jacobsen/wayland/jay-config/: Cargo.toml  default.nix
home/jacobsen/wayland/jay-config/src/: bar.rs  behavior.rs  clients.rs  env.rs  generated.rs  inputs.rs  lib.rs  modes.rs  outputs.rs  shortcuts.rs  theme.rs  windows.rs
home/jacobsen/wayland/jay-config/src/bar/: audio.rs  backlight.rs  battery.rs  bluetooth.rs  clock.rs  cpu.rs  disk.rs  exec.rs  hardware.rs  i3status.rs  memory.rs  network.rs  notifications.rs  schedule.rs  stats.rs  sysfs.rs
hosts/hallandren/: default.nix  hardware-configuration.nix  home.nix  rocm.nix  webdav.nix
hosts/luthadel/: default.nix  hardware-configuration.nix  samba.nix
modules/home-manager/: awww.nix  default.nix  jay.nix
modules/nixos/: default.nix  jay.nix  piper.nix  via.nix  waywall.nix
overlays/: default.nix
pkgs/: default.nix  glfw-waywall.nix  jay.nix  ninjabrainbot.nix  runic.nix  zed-julia.nix
secrets/: default.yaml
system/: default.nix  localization.nix  packages.nix  preservation.nix  security.nix  sops.nix  stylix.nix  users.nix
system/boot/: plymouth.nix
system/hardware/: bluetooth.nix
system/network/: default.nix  dns.nix  fail2ban.nix  firewall.nix  hostname.nix  network-manager.nix  ssh.nix
system/programs/: corectrl.nix  default.nix  gamemode.nix  gamescope.nix  nh.nix  nix-ld.nix  shell.nix  steam.nix  (+2 more)
(+92 files in other folders)
