[package]
name = "jay-config-lib"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jay_config_lib"
crate-type = ["cdylib"]

[dependencies]
jay-config = { path = "vendor/jay-config" }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = { version = "0.3", features = ["io"] }
libc = "0.2"
serde_json = "1"
uapi = "0.2"
