[package]
name = "jay-config-lib"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "jay_config_lib"
crate-type = ["cdylib"]

[dependencies]
jay-config = { git = "https://github.com/Ktrompfl/jay", branch = "size-and-position" }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
futures-util = { version = "0.3", features = ["io"] }
serde_json = "1"
uapi = "0.2"
log = "0.4"
